--- a/DjangoBlogApp/blog/templates/blog/index.html
+++ b/DjangoBlogApp/blog/templates/blog/index.html
@@ -1,10 +1,21 @@
+<link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
+<script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
+
+<a href="/blog/logout/" class="pull-right btn btn-mini btn-danger">logout</a>
+
 <h1>Blogs:-</h1>
-{% if latest_blog_list %}
+
+{% if blogs %}
     <ul>
-    {% for blog in latest_blog_list %}
-        <li><a href="/blog/{{ blog.id }}/">{{ blog.user.username }}</a></li>
+    {% for blog in blogs %}
+        <li>
+       		<a href="/blog/{{ blog.id }}/" class="btn btn-link btn-large">{{ blog.user.username }}</a>
+       		<a href="/blog/{{ blog.id }}/delete/" class="btn btn-danger btn-mini">delete</a>
+        </li>
     {% endfor %}
     </ul>
 {% else %}
     <p>No blogs are available.</p>
 {% endif %}
+
+<a href="/blog/create/" class="btn btn-primary btn-large">new blog</a>
