--- a/DjangoBlogApp/blog/templates/blog/show.html
+++ b/DjangoBlogApp/blog/templates/blog/show.html
@@ -1,10 +1,25 @@
 <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
 <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
-<a href="" class="pull-right btn btn-mini btn-danger">logout</a>
+
+<div class="pull-right btn-group">
+    {% if form %}
+        {% if follow %}
+            <a href="/blog/{{ blog.id }}/unfollow/" class="btn btn-mini btn-danger">Unfollow</a>
+        {% else %}
+            <a href="/blog/{{ blog.id }}/follow/" class="btn btn-mini btn-primary">Follow</a>
+        {% endif %}
+        <a href="/blog/logout/" class="btn btn-mini btn-danger">logout</a>
+    {% else %}
+        <a href="/blog/" class="btn btn-mini btn-primary">login</a>
+    {% endif %}
+</div>
+
 <h1>Welcome to {{ blog.user.username }}'s blog</h1>
 <p>This blog has {{ blog.no_of_views }} views ;)</p>
 
-<a href="/blog/{{ blog.id }}/delete/" class="btn btn-danger btn-mini">delete blog</a>
+{% if blog.user == user %}
+    <a href="/blog/{{ blog.id }}/delete/" class="btn btn-danger btn-mini">delete blog</a>
+{% endif %}
 
 {% if posts %}
 	<h3>Posts:-</h3>
@@ -12,7 +27,9 @@
     {% for post in posts %}
         <li>
         	<a href="/blog/post/{{ post.id }}/" class="btn btn-link btn-large">{{ post.title }}</a>
-       		<a href="/blog/post/{{ post.id }}/delete/" class="btn btn-danger btn-mini">delete</a>
+       		{% if post.user == user %}
+               <a href="/blog/post/{{ post.id }}/delete/" class="btn btn-danger btn-mini">delete</a>
+            {% endif %}
         </li>
     {% endfor %}
     </ul>
@@ -20,8 +37,10 @@
     <p>There are no posts available yet</p>
 {% endif %}
 
-<h3>new post:</h3>
-<form class="navbar-form pull-left" action="/blog/{{ blog.id }}/post/create/" method="POST">{% csrf_token %}
-    {{ form }}
-    <input type="submit" class="btn btn-primary btn-mini" value="add post">
-</form>
+{% if form %}
+    <h3>new post:</h3>
+    <form class="navbar-form pull-left" action="/blog/{{ blog.id }}/post/create/" method="POST">{% csrf_token %}
+        {{ form }}
+        <input type="submit" class="btn btn-primary btn-mini" value="add post">
+    </form>
+{% endif %}
