--- a/DjangoBlogApp/blog/templates/post/show.html
+++ b/DjangoBlogApp/blog/templates/post/show.html
@@ -14,7 +14,7 @@
 <p>{{ post.content }}</p>
 
 {% if post.user == user %}
-  <a href="/blog/post/{{ post.id }}/edit/" class="btn btn-mini btn-danger">edit your post</a>
+  <a href="/blog/post/{{ post.id }}/edit/" class="btn btn-mini btn-success">edit your post</a>
 {% endif %}
 
 <a name="fb_share" type="button_count" onclick="
