--- a/DjangoBlogApp/blog/templates/blog/index.html
+++ b/DjangoBlogApp/blog/templates/blog/index.html
@@ -1,7 +1,10 @@
 <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
 <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
 
-<a href="/blog/logout/" class="pull-right btn btn-mini btn-danger">logout</a>
+<div class="pull-right btn-group">
+  <a href="/blog/logout/" class="btn btn-mini btn-danger">logout</a>
+  <a href="/blog/users/" class="btn btn-mini btn-primary">users list</a>
+</div>
 
 <h1>Blogs:-</h1>
 
